# memo-django

./: Makefile  db.sqlite3  pyproject.toml
api/: apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20220915_0157.py
api/users/: urls.py
api/users/views/: __init__.py  auth.py  user.py
mysite/: settings.py  urls.py
users/application/dtos/: auth.py
users/application/services/: auth.py
users/domain/: mappers.py
users/domain/aggregate/account/: entities.py  repositories.py
users/domain/aggregate/verification_code/: entities.py  repositories.py
users/infra/rdb/django_orm/: account.py  verification_code.py
users/migrations/: 0001_initial.py  0002_verificationcode_context_key.py  0003_verificationcode_use_at.py
users/models/: __init__.py  access_token.py  account.py  credential.py  verification_code.py
